[package]
name = "pie_format"
version = "1.0.1"
edition = "2021"
authors = ["Dylan Falconer <me@falconerd.com>"]
description = "PIE - Pixel Indexed Encoding - image format with optional external palette, especially good for pixel art. Reference implementation and PNG -> PIE CLI."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Falconerd/pie"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.7"
